# internal/api/server.go
@@ -7,15 +7,28 @@ import (
 )
 
 type Server struct {
-	users UserService
+	users        UserService
+	sessions     SessionService
+	transactions TransactionService
 }
 
 var _ ServerInterface = (*Server)(nil)
 
-func NewServer(users UserService) *Server {
-	return &Server{
-		users: users,
+type ServerOption func(*Server)
+
+func WithFinancialServices(sessions SessionService, transactions TransactionService) ServerOption {
+	return func(s *Server) {
+		s.sessions = sessions
+		s.transactions = transactions
 	}
+}
+
+func NewServer(users UserService, options ...ServerOption) *Server {
+	s := &Server{users: users}
+	for _, option := range options {
+		option(s)
+	}
+	return s
 }
 
 func (s *Server) GetHealth(c *gin.Context) {
